// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Render correct label with correct field type 1`] = `
<div>
  <label>
    label1
  </label>
  <input
    type="text"
  />
</div>
`;

exports[`Render correct label with correct field type 2`] = `
<div>
  <label>
    label2
  </label>
  <input
    type="date"
  />
</div>
`;
